[GStreamer][Mac] Fix WebAudio build https://bugs.webkit.org/show_bug.cgi?id=150030

Patch by Philippe Normand <pnormand@igalia.com> on 2015-10-31
Reviewed by Darin Adler.

Wrap Accelerate.framework API calls around USE(ACCELERATE) ifdefs.

* platform/audio/Biquad.cpp:
(WebCore::Biquad::Biquad):
(WebCore::Biquad::process):
(WebCore::Biquad::reset):
* platform/audio/Biquad.h:
* platform/audio/DirectConvolver.cpp:
(WebCore::DirectConvolver::process):
* platform/audio/FFTFrame.h:
* platform/audio/VectorMath.cpp:

Canonical link: https://commits.webkit.org/168936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191844 268f45cc-cd09-0410-ab3c-d52691b4dbfc